# stm32-sys

./: .gitignore  CMakeLists.txt  README.md  build.sh  cmake-arm-toolchain.cmake  deploy.sh  stm32f401re.ld
openocd/: nucleo_stm32f401.cfg
source/: base.h  clock.c  clock.h  crt0.c  gpio.c  gpio.h  main.c  platform.h  sys_stm32f4.c  sys_stm32f4.h  uart.c  uart.h
